--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+h1{
+	color: red;
+
+}
+
+p#index-title{
+	text-align: center;
+	font-size: 15px;
+	color: blue;
+}
+
+.posts{
+	border: 3px dashed pink;
+	margin: 5px;
+	padding: 15px;
+	height: 30px;
+}
+
+section{
+	background: #5998ff;
+	border-style: solid;
+	border-width: 5px;
+	margin: 55px 5px 5px 5px;
+	padding: 15px 5px 5px 5px;
+
+}
