--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -1,2 +1,3 @@
-<h1>Welcome#contact</h1>
-<p>Find me in app/views/welcome/contact.html.erb</p>
+<h1>Contact Us <span class="glyphicon glyphicon-envelope
+"></span></h1>
+<p>You can reach us at email@byahoo.com</p>
