--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Welcome to Bloccit</h1>
+<h1>Welcome to Bloccit</h1><spen class="glyphicon glyphicon-envelope
+"></span>
 <p>This is the home page for Bloccit.</p>
