css button link

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,4 @@
-<h1>About Bloccit</h1>
-<p>Created by <%= my_name %></p>
+<h1 class="center">About Bloccit</h1>
+<p class ="center">Created by <%= my_name %></p>
+<%= link_to "Tweeter", "https://twitter.com/acjj_us", class: "social-btn" %>
+
