--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -1,3 +1,2 @@
-<h1>Contact Us <span class="glyphicon glyphicon-envelope
-"></span></h1>
+<h1>Contact Us <span class="glyphicon glyphicon-envelope"></span></h1>
 <p>You can reach us at email@byahoo.com</p>
