--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
-<h1>Welcome to Bloccit</h1><spen class="glyphicon glyphicon-envelope
-"></span>
+<h1>Welcome to Bloccit   <spen class="glyphicon glyphicon-leaf"></span></h1>
 <p>This is the home page for Bloccit.</p>
+
+
