--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,10 +1,8 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-h1{
-	color: red;
 
-}
+
 
 p#index-title{
 	text-align: center;
@@ -12,12 +10,12 @@ p#index-title{
 	color: blue;
 }
 
-.posts{
-	border: 3px dashed pink;
-	margin: 5px;
-	padding: 15px;
-	height: 30px;
-}
+ .posts {
+   border: solid;
+   margin: 5px;
+   padding: 5px;
+   height: 200px;
+ }
 
 section{
 	background: #5998ff;
@@ -25,5 +23,24 @@ section{
 	border-width: 5px;
 	margin: 55px 5px 5px 5px;
 	padding: 15px 5px 5px 5px;
+	}
 
+.center{
+	text-align: center;
 }
+
+.social-btn{
+	position:relative;
+	margin: 0 auto;
+	top: 20px;
+	padding:15px 0 15px 0;
+	display: block;
+	height: 50px;
+	width: 100px;
+	background: purple;
+	color: red;
+	text-align:center;
+	font-size: 1em;
+	border: 3px solid orange;
+	border-radius: 10px;
+	}
