--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,13 @@
 <body>
 	<div class="container">
 		<ul class="nav nav-tabs">
-			<li><%= link_to "Home", welcome_index_path %></li>
-			<li><%= link_to "About", welcome_about_path %></li>
-			<li><%= link_to "Contact", welcome_contact_path %></li>
+			<!--<li>#%= link_to "Home", welcome_index_path %></li>
+			<li>#%= link_to "About", welcome_about_path %></li>
+			<li>#%= link_to "Contact", welcome_contact_path %></li> -->
+			<li><%= link_to "Bloccit Home", root_path %></li>
+			<li><%= link_to "About", about_path %></li>
+			<li><%= link_to "Contact", contact_path %></li> 
+
 		</ul>
 
 		<%= yield %>
