--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,28 @@
 			<li><%= link_to "Bloccit Home", root_path %></li>
 			<li><%= link_to "About", about_path %></li>
 			<li><%= link_to "Contact", contact_path %></li> 
-		
+			<li><%= link_to "Post", posts_path %></li> 
+			<li><%= link_to "News", advertisements_path %></li> 
+
+
 		</ul>
+
+		<% if flash[:notice] %>
+			<div class="alert alert-success">
+				<button type="button" class="close" data-dismiss="alert">&times;</button>
+				<%= flash[:notice] %>
+			</div>
+		<% elsif flash[:error] %>
+			<div class="alert aler-danger">
+				<button type="button" class="close" data-dismiss="alert">&times; </button>
+				<%= flash[:error] %>
+			</div>
+			<% elsif flash[:alert] %>
+			<div class="alert alert-warning">
+				<button type="button" class="close" data-dismiss="alert">&times;</button>
+				<%= flash[:alert] %>
+			</div>
+			<% end %>
 
 		<%= yield %>
 	</div>
