--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,2 +1,27 @@
-<h1>Posts#edit</h1>
-<p>Find me in app/views/posts/edit.html.erb</p>
+<h1>Edit Post</h1>
+
+<div class="row">
+	<div class="col-md-4">
+			<p>Guidelines for posts</p>
+			<ul>
+				<li>Make sure the it ryms.</li>
+				<li>Do't use the letter "A".</li>
+				<li>The incesant use of hashtag will get you banned</li>
+			</ul>
+	</div>
+	<div class="col-md-8">
+		<%= form_for @post do |f| %>
+			<div class="form-group">
+				<%= f.label :title %>
+				<%= f.text_field :title, class: "form-control", placeholder: "Enter post title" %>
+			</div>
+			<div class="form-group">
+				<%= f.label :body %>
+				<%= f.text_area :body, rosw:8, class: "form-control", placeholder: "Enter post body" %>
+			</div>
+			<div class="form-group">
+				<%= f.submit "Save", class: "btn btn-info" %>
+			</div>
+		<% end %>
+	</div>
+</div>
