--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "Create new post", new_post_path , class: "label label-warning col-md-3 col-md-offset-9"%>
 <h1>All Posts</h1>
 <% @posts.each do |post| %>
     <div class="media">
