--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 			<li><%= link_to "Contact", contact_path %></li> 
 			<li><%= link_to "Post", posts_path %></li> 
 			<li><%= link_to "News", advertisements_path %></li> 
-
+			<li><%= link_to "Question", questions_path %></li> 
 
 		</ul>
 
