--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,18 @@
 			<li><%= link_to "Post", posts_path %></li> 
 			<li><%= link_to "News", advertisements_path %></li> 
 			<li><%= link_to "Question", questions_path %></li> 
+		
+
+			<div class="pull-right user-info">
+				<% if current_user %>
+				hello <%= current_user.email %>! <%= link_to "Sign Out",
+				destroy_user_session_path, method: :delete %>
+         		<% else %>
+         			<%= link_to "Sign In", new_user_session_path %> or
+         			<%= link_to "Sign Up", new_user_registration_path %>
+         		<% end %>
+         	</div>
+           
 
 		</ul>
 
