--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,8 @@
 
 		</ul>
 
+		<h1><%= flash[:set] %></h1>
+
 		<% if flash[:notice] %>
 			<div class="alert alert-success">
 				<button type="button" class="close" data-dismiss="alert">&times;</button>
