--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,21 @@
-<%= link_to "Create new post", new_post_path , class: "label label-warning col-md-3 col-md-offset-9"%>
+ <% if policy(Post.new).create? %>
+
+<%= link_to "Create new post", new_post_path , class: "label label-warning col-md-3 col-md-offset-9" %>
+<% end %>
 <h1>All Posts</h1>
 <% @posts.each do |post| %>
-    <div class="media">
-     <div class="media-body">
-       <h4 class="media-heading">
-         <%= link_to post.title, post %>
-       </h4>
-       	<small>
-       		submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %><br>
-       		<%= post.comments.count %> Comments
-       	</small>
-     </div>
-   </div>
+  <div class="media">
+    <div class="media-body">
+      <h4 class="media-heading">
+        <%= link_to post.title, post %>
+      </h4>
+       <small>
+         submitted <%= time_ago_in_words(post.created_at) %> ago by 
+        post.user.name 
+
+         <br>
+         <%= post.comments.count %> Comments
+       </small>
+    </div>
+  </div>
 <% end %>
