--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,6 +3,7 @@
 <%= link_to "Create new post", new_post_path , class: "label label-warning col-md-3 col-md-offset-9" %>
 <% end %>
 <h1>All Posts</h1>
+ <% if policy(Post.all).index? %>
 <% @posts.each do |post| %>
   <div class="media">
     <div class="media-body">
@@ -18,4 +19,5 @@
        </small>
     </div>
   </div>
+<% end %>
 <% end %>
