--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 			<li><%= link_to "Bloccit Home", root_path %></li>
 			<li><%= link_to "About", about_path %></li>
 			<li><%= link_to "Contact", contact_path %></li> 
-			<li><%= link_to "Post", posts_path %></li> 
+			<!-- link_to "Post", topic_posts_path  -->
 			<li><%= link_to "News", advertisements_path %></li> 
 			<li><%= link_to "Question", questions_path %></li> 
 		
