--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,3 @@
-
-
-
-
 <h1>New Post</h1>
 
 <div class="row">
@@ -14,7 +10,7 @@
 			</ul>
 		</div>
 	    <div class="col-md-8">
-			<%= form_for @post do |f| %>
+			<%= form_for [@topic, @post] do |f| %>
 				<div class="form-group">
 					<%= f.label :title %>			
 					<%= f.text_field :title, class: "form-control", placeholder: "Enter post title" %>
