--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,16 +3,16 @@
 <%= link_to "Create new post", new_post_path , class: "label label-warning col-md-3 col-md-offset-9" %>
 <% end %>
 <h1>All Posts</h1>
- <% if policy(Post.new).index? %>
+ <% if policy(@posts).index? %>
 <% @posts.each do |post| %>
   <div class="media">
     <div class="media-body">
-      <h4 class="media-heading">
-        <%= link_to post.title, post %>
+      <h<4 class="media-heading">
+        %= link_to post.title, post %>
       </h4>
        <small>
          submitted <%= time_ago_in_words(post.created_at) %> ago by 
-        post.users.name
+        #####needs to be fixed post.user.user
          <br>
          <%= post.comments.count %> Comments
        </small>
