Association crate-post imcomplete

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
 			<li><%= link_to "About", about_path %></li>
 			<li><%= link_to "Contact", contact_path %></li> 
 			<!-- link_to "Post", topic_posts_path  -->
+			<li><%= link_to "Topic", topics_index_path %></li>
 			<li><%= link_to "News", advertisements_path %></li> 
 			<li><%= link_to "Question", questions_path %></li> 
 		
