Association Post-Summary fixed

--- a/app/views/summaries/show.html.erb
+++ b/app/views/summaries/show.html.erb
@@ -1,8 +1,8 @@
-<h1><%= @summary.body %></h1>
+
 
 <div class="row">
   <div class="col-md-8">
-    <p><%= @summary.body %></p>
+   <h1> <p><%= @summary.body %></p> </h1>
   </div>
   <div class="col-md-4">
     <% if policy(@summary).edit? %>
