--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,13 @@
 
 <div class="row">
   <div class="col-md-8">
-  	<h1><%= link_to @summaries.body, [@topic, @post, @summaries] %></h1>
+
+  	<% if @summaries.present? %>
+  	<h1><%= link_to @post.title, [@topic, @post, @summaries] %></h1>
+    <% else %>
+    <h1><%= @post.title %></h1>
+    <%= link_to "New Summaries", new_topic_post_summary_path(@topic, @post, @summaries), class: 'btn btn-info' %>
+    <% end %>
     <p><%= @post.body %></p>
   </div>
  
