--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
 				<%= flash[:notice] %>
 			</div>
 		<% elsif flash[:error] %>
-			<div class="alert aler-danger">
+			<div class="alert alert-danger">
 				<button type="button" class="close" data-dismiss="alert">&times; </button>
 				<%= flash[:error] %>
 			</div>
