--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,10 +7,12 @@
   	<% if @summaries.present? %>
   	<h1><%= link_to @post.title, [@topic, @post, @summaries] %></h1>
     <% else %>
-    <h1><%= @post.title %></h1>
+  <!--   <h1><%= @post.title %></h1> -->
+  <h1><%= markdown_to_html @post.title %></h1>
     <%= link_to "New Summaries", new_topic_post_summary_path(@topic, @post, @summary), class: 'btn btn-info' %>
     <% end %>
-    <p><%= @post.body %></p>
+    <!-- <p><%= @post.body %></p> -->
+    <p><%= markdown_to_html @post.body %></p>
   </div>
  
   <div class="col-md-4">
