--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,11 +1,3 @@
-<%= form_for [topic, post, comment] do |f| %>
-	<% if comment.any? %>
-		<% comment.each do |msg| %>
-
-		<%= msg.body %>
-				submitted <%= time_ago_in_words(comment.created_at) %> ago by <%= comment.user.name %> 
-				<% end %>
-	<% end %>
-	
-<% end %>
-
+<%= comment.body %>
+submitted <b><%= time_ago_in_words(comment.created_at) %> ago </b>by <i><%= comment.user.name %> </i>
+				
