--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for [topic, post, comment] do |f| %>
-	<% if comment.errors.any? %>
+		<% if comment.errors.any? %>
 		<div class = "alert alert-danger" >
 			<h4>There are <%= pluralize(comment.errors.count, "error") %>
 			</h4>
@@ -10,14 +10,12 @@
 			</ul>	
 		</div>
 	<% end %>
-	<% form_group_tag(comment.errors[:body]) do %>
+   <%= form_group_tag(comment.errors[:body]) do %>
 		<%= f.label :body %>
 		<%= f.text_area :body, rows:8, class: "form-control", placeholder: "Enter the comments" %>
-	<% end %>
+  <% end %>
 	<div class="form-group">
 			<%= f.submit "Save", class: "btn btn-info" %>
 	</div>
 <% end %>
-
-
 
