--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,7 +22,7 @@
     
      
         <% @comment.each do |comment| %>
-        <h3><%= render 'comments/comment', {comment: comment } %></h3>
+        <h3><%= render 'comments/comment', {topic: @topic, post: @post,comment: comment } %></h3>
      
   
       <% end %>
@@ -39,6 +39,10 @@
     <% if policy(@post).edit? %>
       <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
     <% end %>
+
+    <% if policy(@post).destroy? %>
+      <%= link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this post?'}  %>
+      <% end %>
   </div>
 </div>
 
