--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,5 @@
 <%= comment.body %>
 submitted <b><%= time_ago_in_words(comment.created_at) %> ago </b>by <i><%= comment.user.name %> </i>
 <% if policy(comment).destroy? %>				
-	<%= link_to "Delete this comment.", [topic, post, comment], method: :delete %>
+	<%= link_to "Delete this comment.", [post, comment], method: :delete %>
 <% end %>
