imcomplete database saved

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -31,7 +31,9 @@
    
 
     </p>  
-<%= render 'comments/form', {topic: @topic, post: @post, comment: @comment.new } %>
+    <% if policy(@comment).create? %>
+<%= render 'comments/form', {topic: @topic, post: @post} %>
+    <% end %>
   </div>
 
  
