--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,7 +14,11 @@
   </h1>
     <%= link_to "New Summaries", new_topic_post_summary_path(@topic, @post, @summary), class: 'btn btn-info' %>
     <% end %>
-   
+     <small>
+       <%= image_tag(@post.user.avatar.tiny.url) if @post.user.avatar? %>
+       submitted <%= time_ago_in_words(@post.created_at) %> ago by
+       <%= @post.user.name %>
+     </small>
     <p>
 
 <%= @post.markdown_body %>
