--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,16 +1,16 @@
-<%= form_for [topic, post, @comment.new] do |f| %>
-		<% if @comment.new.errors.any? %>
+<%= form_for [topic, post, comment] do |f| %>
+		<% if comment.errors.any? %>
 		<div class = "alert alert-danger" >
-			<h4>There are <%= pluralize(@comment.errors.count, "error") %>
+			<h4>There are <%= pluralize(comment.errors.count, "error") %>
 			</h4>
 			<ul>
-				<% @comment.errors.full_messages.each do |msg| %>
+				<% comment.errors.full_messages.each do |msg| %>
 					<li><%= msg %></li>
 				<% end %>
 			</ul>	
 		</div>
 	<% end %>
-   <%= form_group_tag(@comment.new.errors[:body]) do %>
+   <%= form_group_tag(comment.errors[:body]) do %>
 		<%= f.label :body %>
 		<%= f.text_area :body, rows:8, class: "form-control", placeholder: "Enter the comments" %>
   <% end %>
