--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,33 +6,24 @@
 
   <% if @summaries.present? %>
   	   <h1><%= link_to @post.title, [@topic, @post, @summaries] %></h1>
-    <% else %>
+  <% else %>
  
      <h1>
       <%= @post.markdown_title %>
      </h1>
     
       <%= link_to "New Summaries", new_topic_post_summary_path(@topic, @post, @summary), class: 'btn btn-info' %>
-      <% end %>
+  <% end %>
       
-      <%= @post.markdown_body %>
+  <%= @post.markdown_body %>
 
-    <p>
+  <p>
 
-    
-     
-        <% @comment.each do |comment| %>
-        <h3><%= render 'comments/comment', {comment: comment } %></h3>
-     
   
-      <% end %>
-
-
-   
-
+  <h3><%= render partial: 'comments/comment', collection: @comments %></h3>
     </p>  
-    <% if policy(@comment).create? %>
-<%= render 'comments/form', {topic: @topic, post: @post} %>
+    <% if policy(Comment.new).create? %>
+<%= render partial: 'comments/form', locals: {topic: @topic, post: @post, comment: Comment.new} %>
     <% end %>
   </div>
 
