--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -14,3 +14,8 @@
 		</div>
 </div>
 
+<%= form_for [@topic, @post], multipart: true do |f| %>
+    <%= f.hidden_field :picture_cache %>
+    <%= f.file_field :picture %>
+      
+<% end %>
