--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [topic, post] do |f| %>
+<%= form_for [topic, post] , multipart: true do |f| %>
 	<% if post.errors.any? %>
 		<div class = "alert alert-danger" >
 			<h4>There are <%= pluralize(post.errors.count, "errors" ) %>.
@@ -13,6 +13,9 @@
 	<%= form_group_tag(post.errors[:title]) do %>
  		<%= f.label :title %>
 		<%= f.text_field :title, class: "form-control", placeholder: "Enter post title" %>
+		  <%= f.hidden_field :picture_cache %>
+    <%= f.file_field :picture %>
+      
 	<% end %>
 	<%= form_group_tag(post.errors[:body]) do %>
 		<%= f.label :body %>
