--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-md-8">
     <h3>Change email or password</h3>
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :patch }) do |f| %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), multipart: true, html: { method: :patch }) do |f| %>
       <%= devise_error_messages! %>
       <div class="form-group">
         <%= f.label :email %>
@@ -40,16 +40,16 @@
         <%= f.text_field :name, class: 'form-control', placeholder: "Enter name", autofocus: true %>
       </div>
 
-        <% if current_user.avatar? %>
+        <% if current_user.picture? %>
          <div class="form-group">
-           <p>Current avatar</p>
-           <%= image_tag( current_user.avatar.profile.url ) %>
+           <p>Current picture</p>
+           <%= image_tag( current_user.picture.url ) %>
          </div>
        <% end %>
        <div class="form-group">
-         <%= f.label :avatar %>
-         <%= f.file_field :avatar %>
-         <%= f.hidden_field :avatar_cache %>
+         <%= f.label :picture %>
+         <%= f.file_field :picture %>
+         <%= f.hidden_field :picture_cache %>
        </div>
 
       <div class="form-group">
