--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,7 +15,7 @@
     <%= link_to "New Summaries", new_topic_post_summary_path(@topic, @post, @summary), class: 'btn btn-info' %>
     <% end %>
      <small>
-       <%= image_tag(@post.user.avatar.tiny.url) if @post.user.avatar? %>
+       <%= image_tag(@post.user.picture.tiny.url) if @post.user.picture? %>
        submitted <%= time_ago_in_words(@post.created_at) %> ago by
        <%= @post.user.name %>
      </small>
