--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -19,7 +19,7 @@
   			 </small>
        
           <small>
-             <%= image_tag(post.user.picture.large.url) if post.user.picture? %>
+             <%= image_tag(post.user.avatar.tiny.url) if post.user.avatar? %>
              submitted <%= time_ago_in_words(post.created_at) %> ago by
              <%= post.user.name %><br>
              <%= post.comments.count %> Comments
@@ -27,6 +27,7 @@
          </div>
        </div>
      <% end %>
+      
    </div>
    <div class="col-md-4">
      <% if policy(Post.new).create? %>
