--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -40,16 +40,16 @@
         <%= f.text_field :name, class: 'form-control', placeholder: "Enter name", autofocus: true %>
       </div>
 
-        <% if current_user.picture? %>
+          <% if current_user.avatar? %>
          <div class="form-group">
-           <p>Current picture</p>
-           <%= image_tag( current_user.picture.url ) %>
+           <p>Current avatar</p>
+           <%= image_tag( current_user.avatar.profile.url ) %>
          </div>
        <% end %>
        <div class="form-group">
-         <%= f.label :picture %>
-         <%= f.file_field :picture %>
-         <%= f.hidden_field :picture_cache %>
+         <%= f.label :avatar %>
+         <%= f.file_field :avatar %>
+         <%= f.hidden_field :avatar_cache %>
        </div>
 
       <div class="form-group">
