Paging done hw39

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,7 +18,7 @@
          <%= post.comments.count %> Comments
        </small>
     </div>
-        
+        <%= will_paginate @posts %>
   </div>
 <% end %>
 <% end %>
