done comments, pictures

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -12,11 +12,11 @@
          <div class="media-body">
            <h4 class="media-heading">
            <%= link_to post.markdown_title, [@topic, post] %> 
+
+           <%=image_tag (post.picture.thumb.url) if post.picture? %>
+
            </h4>
-           	 <small>
-     			submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %><br>
-     			<%= post.comments.count %> Comments
-  			 </small>
+          
        
           <small>
              <%= image_tag(post.user.avatar.tiny.url) if post.user.avatar? %>
