--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,10 +22,18 @@
     <p>
 
 <%= @post.markdown_body %>
-<% if @post.picture? %>
-<%= image_tag(@post.picture_url(:large), width: 100, height: 100) %>
-<% end %>
+
+
+
+  <%= render partial: 'comments/comment', collection: @comments  %>
+
+<%=image_tag (@post.picture.large.url) if @post.picture? %>
+
     </p>
+
+     <% if policy(Comment.new).create? %>
+<%= render partial: 'comments/form', locals: {topic: @topic, post: @post, comment: Comment.new} %>
+    <% end %>
   </div>
  
   <div class="col-md-4">
