--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,18 @@
+<div class = "media">
+	<div class="media-left">
+	    <%= image_tag(comment.user.avatar.tiny.url, class: "media-object") if comment.user.avatar? %>
+    </div>
+    <div class = "media-body">
+     <small>
 
-<p>
-	<%= comment.body %>
+      
+<p><%= comment.body %></p>
 submitted <b><%= time_ago_in_words(comment.created_at) %> ago </b>by <i><%= comment.user.name %> </i>
-</p>
+
+<% if policy(comment).destroy? %>
+	<%= link_to "Delete", [@topic, @post, comment], method: :delete %>
+<% end %>
+</small>
+     </div>
+
+</div>
