--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -10,7 +10,7 @@
 submitted <b><%= time_ago_in_words(comment.created_at) %> ago </b>by <i><%= comment.user.name %> </i>
 
 <% if policy(comment).destroy? %>
-	<%= link_to "Delete", [@topic, @post, comment], method: :delete %>
+	<%= link_to "Delete", [@post, comment], method: :delete %>
 <% end %>
 </small>
      </div>
