--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,8 @@
 			<li><%= link_to "Contact", contact_path %></li> 
 			<!-- link_to "Post", topic_posts_path  -->
 			<li><%= link_to "Topic", topics_path %></li>
-			<li><%= link_to "News", advertisements_path %></li> 
-			<li><%= link_to "Question", questions_path %></li> 
+			<li><%= link_to "News", advertisement_path %></li> 
+			</li> 
 		
 
 			<div class="pull-right user-info">
