--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,6 +18,8 @@
        <%= pluralize(@post.down_votes, 'down vote') %>
      </small>
    </div>
+       <%= render partial: 'favorites/favorite', locals: { post: @post } %>
+
     <% end %>
      <small>
        <%= image_tag(@post.user.avatar.tiny.url) if @post.user.avatar? %>
