imcomplete user/5 admin

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
          <%= render @posts %>
        </div>
        <div class="tab-pane" id="comments">
-         <%= render @user.comments %>
+         <%= render @comments %>
        </div>
      </div>
    </div>
