imcomplete Warden rspec

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,8 @@
          <%= render @posts %>
        </div>
        <div class="tab-pane" id="comments">
-         <%= render @comments %>
+         <%= render @user.comments %>
+         <%= render partial: "comments/comment", collection: @comments %>
        </div>
      </div>
    </div>
