--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -6,9 +6,9 @@
      	<small>
 			<p><%= comment.body %></p>
 			submitted <b><%= time_ago_in_words(comment.created_at) %> ago </b>by <i><%= comment.user.name %> </i>
-
-			<% if policy(comment).destroy? %>
-				<%= link_to "Delete", [comment.post, comment], method: :delete %>
+			<%= puts comment.inspect %>
+			<% if policy(comment).destroy? && !comment.post.nil?%>
+				<%= link_to "Delete", comment_url_helper(comment), method: :delete %>
 			<% end %>
 		</small>
      </div>
