--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -8,7 +8,8 @@
 			submitted <b><%= time_ago_in_words(comment.created_at) %> ago </b>by <i><%= comment.user.name %> </i>
 			<%= puts comment.inspect %>
 			<% if policy(comment).destroy? && !comment.post.nil?%>
-				<%= link_to "Delete", comment_url_helper(comment), method: :delete %>
+			 <%= link_to "Delete", [comment.post, comment], method: :delete, remote: true %>
+
 			<% end %>
 		</small>
      </div>
