--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,10 @@
      <div class="tab-content">
        <div class="tab-pane active" id="posts">
          <%= render @posts %>
+         <small>
+           <%= pluralize(@user.posts.count, 'post') %>,
+           <div class='js-comments-count'><%= pluralize(@user.comments.count, 'comment') %></div>
+         </small>
        </div>
        <div class="tab-pane" id="comments">
          <%= render @user.comments %>
