--- a/app/views/comments/destroy.js.erb
+++ b/app/views/comments/destroy.js.erb
@@ -1,5 +1,10 @@
  <% if @comment.destroyed? %>
-   $('#comment-' +<%= @comment.id %>).hide();
+$('#comment-' +<%= @comment.id %>).hide();   
+ $('#comment-' +<%= @comment.id %>).fadeOut( "slow" );
+   $('.js-comments-count').html("<%= pluralize(@comment.user.comments.count, 'comment') %>");
+
  <% else %>
    $('#comment-' +<%= @comment.id %>).prepend("<div class='alert alert-danger'><%= flash[:error] %></div>");
  <% end %>
+
+
