--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,2 +1,6 @@
- $('.js-comments').prepend("<%= escape_javascript(render(@comment)) %>");
-$('.new-comment').html("<%= escape_javascript(render partial: 'comments/form', locals{ post: @post, comment: @new_comment }) %>");
+ <% if @comment.valid? %>
+   $('.js-comments').append("<%= escape_javascript(render(@comment)) %>");
+   $('.new-comment').html("<%= escape_javascript(render partial: 'comments/form', locals: { post: @post, comment: @new_comment }) %>");
+ <% else %>
+   $('.new-comment').html("<%= escape_javascript(render partial: 'comments/form', locals: { post: @post, comment: @comment }) %>");
+ <% end %>
